<resources>
    <string name="app_name">prak1_thariqaz</string>
    <string name="_081528876692">081528876692</string>
    <string name="submit">Submit</string>
    <string name="thariq_azhar">Thariq Azhar</string>
    <string name="koenigsegg_regera">Koenigsegg Regera</string>
    <string name="view_more">View more</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="button">Button</string>
    <string name="select_your_car">Select your car</string>
    <string name="gt"><![CDATA[>]]></string>
    <string name="lt"><![CDATA[<]]></string>
    <string name="name">Name:</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="phone">Phone:</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="address">Address:</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="submit_2">Submit</string>
</resources>