<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableLayout">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/img" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="25dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editTextEnterName"
            android:layout_height="48dp"
            android:layout_column="1"
            android:hint="@string/enter_your_name" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start">

        <TextView
            android:id="@+id/textView7"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_column="0"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editTextEnterPhone"
            android:layout_height="48dp"
            android:layout_column="1"
            android:hint="@string/enter_your_phone_number" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start">

        <TextView
            android:id="@+id/textView8"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="25dp"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/editTextEnterAddress"
            android:layout_height="48dp"
            android:layout_column="1"
            android:hint="@string/enter_your_address" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_2"
            android:textSize="15sp"
            app:cornerRadius="90dp" />
    </TableRow>
</TableLayout>